--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -792,6 +792,12 @@ body .nav-tab-bar .nav-tab {
     border-right: 1px solid #EAEAEA;
     margin-bottom: 10px;
 }
+.page-block .page-block {
+   margin-bottom: 0;
+   border-left: 0;
+   border-right: 0;
+   border-bottom: 0;
+}
 
 .page-block .page-block-header {
     width: 100%;
