--- a/app/views/icm/incident_journals/edit_upgrade.html.erb
+++ b/app/views/icm/incident_journals/edit_upgrade.html.erb
@@ -1,127 +1,76 @@
-<style type="text/css">
-  ul{
-      padding-left: 40px;
-  }
-  ol{
-      padding-left: 40px;
-  }
-  div.reply{
-      margin-bottom: 2px;
-      border: 1px solid #0F5C8E;
-  }
-  div.reply div.replyHeader{
-      padding: 5px 5px 5px 5px;
-      background: none repeat scroll 0 0 #ADCBE7;
-  }
-  div.reply div.replyHeaderSection{
-    padding: 5px 5px 5px 5px;
-  }
-  .yui-skin-sam .yui-toolbar-container div.yui-toolbar-subcont{
-    border-bottom-width: 1px;
-    padding-bottom: 0;
-    padding-left: 1px;
-  }
-  div.fileList {
-    color: #333333;
-    line-height: 1.6em;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    overflow: hidden;
-    position: relative;
-    border-top: 2px solid #E3EEF8;
-  }
-  div.fileList div.fileItem{
-    color: #888888;
-    display: inline;
-    float: left;
-    padding-bottom: 5px;
-    width: 60px;
-  }
-
-  div.fileList div.fileItem span.fileDesc{
-    color: #888888;
-    display: block;
-  }
-
-  div.fileList div.fileItem img.fileIcon{
-    border: 1px solid #BBC9E2;
-    float: left;
-    margin-bottom: 5px;
-    margin-right: 10px;
-    padding: 3px;
-    vertical-align: top;
-  }
-</style>
 <%= common_title(:model_name=>Icm::IncidentRequest.name,:action_meaning=>t(:label_icm_incident_request_upgrade)) %>
-<%= form_for(@incident_request,:url=>{:action=>"update_upgrade"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
-  <%=f.hidden_field :pass_flag,:value=>"Y" %>
-<div id="reply" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@incident_request,:url=>{:action=>"update_upgrade"},:builder => CustomFormBuilder,:html => { :multipart => true }) do |f| %>
+    <%=f.hidden_field :pass_flag,:value=>"Y" %> <% content_for :form_block_common   do%>
+    <table class="form-table" style="width: 100%;">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_icm_incident_journal_upgrade)%></h2></td>
-          <td class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:label_icm_incident_joural_back_to_request), {:action => "new"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
+            <td class="data-col">
+              <%=upgrade_support_group_name(@incident_request.support_group_id)%>
+            </td>
+            <td class="label-col"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
+            <td class="data-col">
+              <%=f.blank_select :support_person_id,available_upgradable_supporter(@incident_request.support_group_id||0),
+                                                  {},{:id=>"incident_request_support_person_id"}%>
+            </td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+
+          </tr>
+          <tr>
+            <%= fields_for @incident_journal,:as=>"incident_journal",:builder => LabellingFormBuilder,:normal=>true do |sub_f|%>
+              <%= sub_f.hidden_field(:incident_request_id) %>
+            <td class="label-col"><%= t(:label_icm_incident_journal_reply) %></td>
+            <td class="data-col" colspan="3">
+              <%= sub_f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true%>
+              <%= xheditor("msgEditor",true) %>
+            </td>
+            <% end%>
+          </tr>
+          <tr>
+            <td class="label-col"><%= t(:label_icm_incident_journal_attachment) %></td>
+            <td class="data-col" colspan="3">
+              <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"pass_incident_request_file"} %>
+            </td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList"  cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
-              <td class="dataCol">
-                <%=upgrade_support_group_name(@incident_request.support_group_id)%>
-              </td>
-              <td class="labelCol"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
-              <td class="dataCol">
-                <%=f.blank_select :support_person_id,available_upgradable_supporter(@incident_request.support_group_id||0),
-                                                    {},{:id=>"incident_request_support_person_id"}%>
-              </td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
+  <% end %>
 
-            </tr>
-              <%= fields_for @incident_journal,:as=>"incident_journal",:builder => LabellingFormBuilder,:normal=>true do |sub_f|%>
-                <%= sub_f.hidden_field(:incident_request_id) %>
-              <td class="labelCol"><%= t(:label_icm_incident_journal_reply) %></td>
-              <td class="dataCol" colspan="3" width="82%">
-                <%= sub_f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true%>
-                <%= rich_text_area("msgEditor",true) %>
-              </td>
-              <% end%>
-            </tr>
-            <tr>
-              <td class="labelCol"><%= t(:label_icm_incident_journal_attachment) %></td>
-              <td class="dataCol" colspan="3" width="82%">
-                <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"pass_incident_request_file"} %>
-              </td>
-            </tr>
-        </tbody>
-      </table>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:label_icm_incident_joural_back_to_request), {:action => "new"}, {:class => "btn cancel"}%>
+  <% end %>
 
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_icm_incident_journal_upgrade)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <%= error_for @incident_request %>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:label_icm_incident_joural_back_to_request), {:action => "new"}%></div>
-          </td>
-        </tr>
-      </tbody>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
 <% end %>
 
 
