--- a/app/views/irm/reports/_new_step_1.html.erb
+++ b/app/views/irm/reports/_new_step_1.html.erb
@@ -3,88 +3,92 @@
       min-width:128px;
   }
 </style>
-<div  class="wizard-block">
-  <%= render :partial => "step_header",:locals => {:step=>@report.step} %>
-  <div class="pbBody">
-  <%= error_for @report%>
-  <%= form_for(@report,:url=>{:action=>"new"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@report,:url=>{:action=>"new"},:builder => CustomFormBuilder) do |f| %>
   <%= f.hidden_field(:step) %>
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <span class="pbSubExtra">
-                <span class="requiredLegend">
-                  <span class="requiredExampleOuter">
-                    <span class="requiredExample">&nbsp;</span>
-                  </span><span class="requiredMark">*</span>
-                  <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                </span>
-              </span>
-              <h3><%= t(:label_irm_report_choose_report_type) %></h3>
-            </div>
-            <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-                    <tr>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td class="dataCol empty">&nbsp;</td>
-                    </tr>
-                    <tr>
-                      <td class="labelCol empty">&nbsp;</td>
-                      <td width="82%" colspan="3" class="dataCol">
-                        <table>
-                          <thead>
-                            <tr>
-                              <th><%= t(:label_irm_report_choose_report_category) %></th>
-                              <th><%= t(:label_irm_report_choose_report_type) %></th>
-                              <th><%= t(:label_irm_report_type_description) %></th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr>
-                              <td>
-                                <%=select_tag_alias :category_id,available_report_type_category,{},:id=>"reportTypeCategory",:size=>14%>
-                              </td>
-                              <td>
-                                <%=f.select :report_type_id,[],{:required=>true},:id=>"reportType",:size=>14%>
-                              </td>
-                              <td>
-                                <label id="reportTypeDescription"></label>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-            </div>
-        </div>
-      </div>
-    </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
+  <% content_for :form_block_common do %>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col empty">&nbsp;</td>
+          <td colspan="3" class="data-col">
+            <table>
+              <thead>
+                <tr>
+                  <th><%= t(:label_irm_report_choose_report_category) %></th>
+                  <th><%= t(:label_irm_report_choose_report_type) %></th>
+                  <th><%= t(:label_irm_report_type_description) %></th>
+                </tr>
+              </thead>
               <tbody>
                 <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button" id="saveButton"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
+                  <td>
+                    <%=select_tag_alias :category_id,available_report_type_category,{},:id=>"reportTypeCategory",:size=>14%>
+                  </td>
+                  <td>
+                    <%=f.select :report_type_id,[],{:required=>true},:id=>"reportType",:size=>14%>
+                  </td>
+                  <td style="vertical-align: top;">
+                    <label id="reportTypeDescription"></label>
                   </td>
                 </tr>
               </tbody>
             </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>    
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:next),:class=>"btn btn-primary"%>
+    <%= link_to t(:cancel), {:action => "index"},:class => "btn cancel" %>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:step_n, :n => @report.step.to_s) %><%= report_page_step_title[@report.step.to_i] %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+          <td class="page-block-help">
+            <%= t(:step_n_total_m, :n => @report.step.to_s, :m => "5") %>
+          </td>
+        </tr>
+    </table>
+    <%= error_for @report%>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_irm_report_choose_report_type) %></h3>
         </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common %>
+        </div>
+      </div>
     </div>
-    <%end%>
+
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
-</div>
+<% end %>
+
 
 <% report_category_type_script %>
 <script type="text/javascript">
