--- a/app/views/irm/reports/_param_criterions.html.erb
+++ b/app/views/irm/reports/_param_criterions.html.erb
@@ -1,8 +1,8 @@
-<div id="head_3_ep" class="pbSubheader tertiaryPalette">
-     <h3><%= t(:label_irm_report_params_config) %></h3>
+<div class="sub-page-block-header">
+  <h3 class="sub-page-block-title"><%= t(:label_irm_report_params_config) %></h3>
 </div>
-<div class="pbSubsection" id="paramsContent" href="<%= url_for(:action=>"operator_value",:seq_num=>"{seq_num}",:field_id=>"{field_id}") %>">
-  <table cellpadding="0" cellspacing="0" border="0">
+<div class="sub-page-block-body"   id="paramsContent" href="<%= url_for(:action=>"operator_value",:seq_num=>"{seq_num}",:field_id=>"{field_id}") %>">
+  <table class="form-table">
     <thead>
       <tr>
         <th width="20%"></th>
@@ -15,13 +15,13 @@
        <%= f.fields_for :param_criterions,:normal=>true do |sub_f|%>
            <tr>
              <td width="20%"></td>
-             <td width="10px" class="dataCol"><%=sub_f.object.seq_num%>.</td>
-             <td class="dataCol">
+             <td width="10px" class="label-col"><label><%=sub_f.object.seq_num%>.</label></td>
+             <td class="data-col">
                <%=sub_f.hidden_field(:seq_num)%>
                <%=sub_f.hidden_field(:param_flag)%>
                <%=sub_f.blank_select(:field_id,grouped_options_for_select(selectable_fields,sub_f.object.field_id),{},{:class=>"filterColumnSelect",:ref=>sub_f.object.seq_num})%>
              </td>
-             <td class="dataCol filterOperationValue" id="param<%=sub_f.object.seq_num%>">
+             <td class="data-col filterOperationValue" id="param<%=sub_f.object.seq_num%>">
                <%= render_report_filter_field(sub_f.object.field_id,sub_f)  %>
              </td>
            </tr>
