--- a/app/views/skm/channels/get_data.html.erb
+++ b/app/views/skm/channels/get_data.html.erb
@@ -1,6 +1,6 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-    <%= link_to(t(:edit),{:controller => "skm/channels", :action=>"edit",:id=>data[:id]}) %>
+    <%= link_to(t(:edit),{:controller => "skm/channels", :action=>"edit",:id=>data[:id]}) %>&nbsp;
     <%= link_to(t(:show),{:controller => "skm/channels", :action=>"show",:id=>data[:id]}) %>
   <% end %>
   <% builder.column(:channel_code,{:title=>t(:label_skm_channel_code), :searchable => true,:width=>"100px"})%>
