--- a/app/views/irm/bulletins/portlet.html.erb
+++ b/app/views/irm/bulletins/portlet.html.erb
@@ -1,30 +1,21 @@
-<div class="sub-block">
-<h3 class="lbHeader"></h3>
-<table cellpadding="0" cellspacing="0" border="0" style="width:100%">
-  <tbody>
-    <tr>
-      <td class="pbTitle"><h3 class="lbHeader"><%= t(:label_irm_bulletin) %></h3></td>
-      <td id="topButtonRow" class="pbButton">
-        <div class="button"><%= link_to t(:new), :controller => "irm/bulletins", :action => "new"%></div>
-        <div class="button"><%= link_to t(:display_all), :controller => "irm/bulletins", :action => "index"%></div>
-      </td>
-      <td class="pbHelp">
-      </td>
-    </tr>
-  </tbody>
-</table>
-<div class="lbBody">
-  <div id="bulletins_list" class="datatable" style="width:100%">
-      <div id="bulletin_title" style="display:none">
-        <%= link_to("{bulletin_title}", {:controller => "irm/bulletins", :action => "show", :id => "{id}"})%>
-      </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:controller => "irm/bulletins", :action => "new"},:class=>"btn"%>
+      <%= link_to t(:display_all),{:controller => "irm/bulletins", :action => "index"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="portletReportSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <%= datatable("bulletins_list",{:controller => "irm/bulletins", :action=>"get_data",:type=>"portlet",:format=>"json"},[])%>
+
   </div>
-  <%= datatable("bulletins_list",{:controller => "irm/bulletins", :action=>"get_data",:format=>"json"},
-                [{:key=>"id",:label=>"", :hidden => true},
-                 {:key=>"bulletin_title",:label=>t(:label_irm_bulletin_title), :formatter=>"Y.irm.template"},
-                 {:key=>"page_views",:label=>t(:label_irm_bulletin_page_views), :width => "70"},
-                 {:key=>"published_date",:label=>t(:label_irm_bulletin_published_date), :width => "150"}],
-                {:force_html=>true}
-      )%>
-</div>
+
+
 </div>
