--- a/app/views/irm/portlets/_new_form.html.erb
+++ b/app/views/irm/portlets/_new_form.html.erb
@@ -1,110 +1,109 @@
-<style type="text/css">
-  select{
-      min-width: 128px;
-  }
-</style>
-<%= form_for(@portlet,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_portlet_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @portlet %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="portlet_code"><%=t(:label_irm_portlet_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"portlet_code"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="portlet_name"><%=t(:label_irm_portlet_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"portlet_name"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="portlet_controller"><%=t(:label_irm_portlet_controller)%></label></td>
-              <td class="dataCol">
-                <%=f.select :controller, nullable_options_for_select(available_all_controller.collect{|p| [p[:controller], p.controller]}, @portlet.controller),
-                                            {},
-                                            {:id=>"portlet_controller_id",
-                                             :required=>true,
-                                             :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
-                                             }%>
 
-              </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="portlet_action"><%=t(:label_irm_portlet_action)%></label></td>
-              <td class="dataCol">
-                <%=f.select :action,nullable_options_for_select([], nil),
-                                                    {},{:required=>true,
-                                                        :id=>"portlet_action_id",
-                                                        :href=>url_for(:controller=>"irm/portlets",:action=>"get_actions_options",:format=>"json",:controllers=>"${portlet_controller_id}"),
-                                                        :origin_value=>@portlet.action,
-                                                        :depend=>"portlet_controller_id",
-                                                        :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"}%>
-              </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="portlet_default_flag"><%=t(:label_irm_portlet_default_flag)%></label></td>
-              <td class="dataCol">
-                <label for="default_flag"><%= f.check_box(:default_flag) %></label>
-              </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="portlet_description"><%=t(:label_irm_portlet_description)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60 ,:id=>"portlet_description"%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@portlet,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label for="portlet_code"><%=t(:label_irm_portlet_code)%></label></td>
+            <td class="data-col"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"portlet_code"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="portlet_name"><%=t(:label_irm_portlet_name)%></label></td>
+            <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"portlet_name"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="portlet_controller"><%=t(:label_irm_portlet_controller)%></label></td>
+            <td class="data-col">
+              <%=f.select :controller, nullable_options_for_select(available_all_controller.collect{|p| [p[:controller], p.controller]}, @portlet.controller),
+                                          {},
+                                          {:id=>"portlet_controller_id",
+                                           :required=>true,
+                                           :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
+                                           }%>
+
+            </td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="portlet_action"><%=t(:label_irm_portlet_action)%></label></td>
+            <td class="data-col">
+              <%=f.select :action,nullable_options_for_select([], nil),
+                                                  {},{:required=>true,
+                                                      :id=>"portlet_action_id",
+                                                      :href=>url_for(:controller=>"irm/portlets",:action=>"get_actions_options",:format=>"json",:controllers=>"${portlet_controller_id}"),
+                                                      :origin_value=>@portlet.action,
+                                                      :depend=>"portlet_controller_id",
+                                                      :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"}%>
+            </td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="portlet_default_flag"><%=t(:label_irm_portlet_default_flag)%></label></td>
+            <td class="data-col">
+              <label for="default_flag"><%= f.check_box(:default_flag) %></label>
+            </td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="portlet_description"><%=t(:label_irm_portlet_description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60 ,:id=>"portlet_description"%></td>
+          </tr>
       </tbody>
     </table>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
+  <% end %>
+
+
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_irm_portlet_new)%></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+
+      </td>
+    </tr></table>
+    <div class="page-block-body">
+      <%= error_for @portlet %>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_a   %>
+        </div>
+      </div>
+
+    </div>
+
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-</div>
+
 <% end %>
+
+
 <script type="text/javascript">
   $(function(){
     if($("#portlet_controller_id")){
