--- a/app/views/irm/reports/portlet.html.erb
+++ b/app/views/irm/reports/portlet.html.erb
@@ -1,50 +1,24 @@
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_report_list)%></h2>
+    </td>
+    <td class="page-block-button">
 
-<style type="text/css">
-  .listViewTitle{font-size:125%;font-weight:bold;}
-</style>
-  <div class="listRelatedObject setupBlock">
-      <div class="page-block">
-        <div class="pbBody">
-          <table class="split-table">
-            <tr>
-              <td>
-                  <div id="report_list" class="datatable" style="width:100%;">
-                    <div id="name" style="display:none">
-                      if('{report_trigger_id}' != ''){
-                        '<%=link_to("{name}",{:action=>"show",:id=>"{id}"}) %> <%=link_to(content_tag(:img,nil,:src=>theme_image_path("s.gif"),:class=>"scheduledIcon"),{:controller=>"irm/report_triggers",:action=>"edit",:id=>"{report_trigger_id}"}) %>'
+    </td>
+    <td class="page-block-help">
+      <div id="portletReportSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <%= datatable("report_list",{:controller => "irm/reports",:action=>"get_data", :folder_id => @folder_id,:format=>"json"},
+                                 [],{:search_box=>"portletReportSearchBox",:paginator_box=>"portletReportPaginator",:export_data=>"#exportData"})%>
 
-                      }
-                      else{
-                        '<%=link_to("{name}",{:action=>"show",:id=>"{id}"}) %>'
-                      }
-                    </div>
-                    <div id="id" class="id" style="display:none">
-                      if('{editable_flag}' == 'true'){
-                         ' <%=link_to(t(:delete),{:action=>"destroy",:id=>"{id}"},:confirm => t(:label_are_you_sure) ,:method => :delete) %> '
-                      }
-                      else{
-                        ''
-                      }
-                    </div>
-                  </div>
-                  <%= datatable("report_list",{:controller => "irm/reports",:action=>"get_data", :folder_id => @folder_id,:format=>"json"},
-                            [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.stemplate", :width => "40px"},
-                             {:key=>"name",:label=>t(:label_irm_report_name),:formatter=>"Y.irm.stemplate", :sortable=>true,:searchable=>true,:width=>"250px"},
-                             @folder_id.present? ? nil:{:key=>"report_folder_name",:label=>t(:label_irm_report_folder), :width => "150px"} ,
-                             {:key=>"report_type_name",:hidden=>true,:label=>t(:label_irm_report_type), :width => "150px"},
-                             {:key=>"editable_flag",:hidden=>true},
-                             {:key=>"report_trigger_id",:hidden=>true},
-                             {:key=>"description",:label=>t(:label_irm_report_description)}].compact,
-                              {:force_html=>true,:search_box=>"reportListSearchBox",:paginator_box=>"regionPaginator",:export_data=>"#exportData"})%>
-                <div id="regionPaginator"></div>
-              </td>
-            </tr>
-          </table>
-
-        </div>
-      </div>
   </div>
 
+
+</div>
 <script type="text/javascript">
   $(function(){
       if($("#folderEditLink")){
